# aiprovider

./: Cargo.toml  README.md  input_schema.json  main.py  pyproject.toml  test.py
chat/: chat_api.py  chat_builder.py  message.py  response.py  tool.py
chat/schemas/: normal_response.py  stream_response.py
models/text_generation/deepinfra/: deepseek.py  meta_llama.py
models/tts/deepinfra/: canopylabs.py  kokoro.py  zyphra.py
models/vision/deepinfra/: google.py  meta_llama.py
src/: api.rs  lib.rs  models.rs
src/aiprovider/: __init__.py
src/aiprovider/chat/: chat_api.py  chat_builder.py  message.py  preset_parameters.py  response.py
src/aiprovider/models/reasoning/deepinfra/: qwen.py
src/aiprovider/models/text_generation/deepinfra/: meta_llama.py
src/aiprovider/models/tts/deepinfra/: canopylabs.py  kokoro.py  sesame.py
src/aiprovider/models/vision/deepinfra/: meta_llama.py
src/aiprovider/tts/: tts_api.py
src/aiprovider/tts/schemas/: tts_normal_response.py
src/aiprovider/utils/: base_api.py  common.py
src/api/: chat_builder.rs  message.rs  preset_parameter.rs
src/models/: reasoning.rs  text_generation.rs  tts.rs  vision.rs
tts/: tts_api.py
utils/: common.py
