[package]
name = "aiprovider"
version = "0.1.0"
edition = "2024"

description = "A Rust crate for interacting with multiple AI providers."
license = "BSD-3-Clause"
repository = "https://github.com/sarrtle/aiprovider"
keywords = ["AI", "API"]
categories = ["api-bindings", "api-client"]

[dependencies]
tokio = {version="1.44.1", features=["full"]}
reqwest = {version="0.12.15", features=["stream", "json", "socks"]}
serde_json = "1.0.140"
